[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virprotrag"
version = "1.0.0"
description = "Literature-grounded viral protein function annotation with retrieval-augmented generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jiaojiao Guan", email = "jiaojiaoguan@gmail.com"},
    {name = "Jiayu Shang"},
    {name = "Cheng Peng"},
    {name = "Yanni Sun"},
]
keywords = ["viral-protein", "function-annotation", "retrieval-augmented-generation", "bioinformatics", "pubmed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "biopython>=1.81",
    "pandas>=2.0",
    "numpy>=1.24",
    "tqdm>=4.64",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "requests>=2.28",
]

[project.optional-dependencies]
medcpt = [
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.2",
    "transformers>=4.30",
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
]

[project.scripts]
virprotrag = "virprotrag.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["virprotrag*"]
